# AI_PI_generator

./: .dockerignore  .env.example  .gitignore  Auto-PI_研究脚手架系统计划书.md  CLAUDE.md  Dockerfile  README.md  idea生成流程与下一步提升计划.md  llm_training_candidates_sample.json  main.py  nixpacks.toml  pyproject.toml  railway.toml  test_failures.md  test_output.txt  下一步开发计划.md  项目现状与关键设定.md
.claude/: settings.local.json
agents/: arxiv_utils.py  budget_tracker.py  cache_utils.py  candidate_composer.py  candidate_evaluator.py  candidate_export_validator.py  candidate_factory_ideation.py  candidate_feasibility.py  candidate_flag_classifier.py  candidate_normalizer.py  candidate_output_writer.py  candidate_repair.py  candidate_reranker.py  data_access_agent.py  data_accessibility.py  data_fetcher_agent.py  development_pack_status.py  development_pack_writer.py  development_pack_writer_llm.py  drafter_agent.py  field_scanner_agent.py  final_ranker.py  hitl_helpers.py  idea_validator_agent.py  ideation_agent.py  ideation_agent_schemas.py  ideation_agent_v2.py  identification_template_filler.py  implementation_spec_builder.py  keyword_planner.py  literature_agent.py  llm.py  logging_config.py  memory_retriever.py  method_data_compatibility.py  openalex_utils.py  openalex_verifier.py  orchestrator.py  reflection_loop.py  research_plan_builder.py  (+8 more)
api/: log_store.py  models.py  run_manager.py  server.py
config/: data_sources.yaml  gate_config.yaml  refine_operations.yaml  reflection_config.yaml  research_plan.json  skill_registry.yaml  source_capabilities.yaml  spatial_units.yaml
docs/: MODULE1_DESIGN.md  MODULE1_UPGRADE_v0.2.md  candidate_factory.md  claude_code_development_pack.md  cloud_deployment.md  data-flow.md  experimental_mode.md  implementation_status.md
memory/: enriched_top_candidates.jsonl  idea_memory.csv
models/: candidate_composer_schema.py  candidate_schema.py  data_access_schema.py  data_catalog.py  data_source.py  implementation_schema.py  research_plan_schema.py  topic_schema.py
prompts/: _enums.txt  academic_drafter.txt  claude_development_task.txt  data_source_registry.json  ideation_seed.txt  level1_hitl_card.txt  reflection_critique.txt  reflection_refine.txt  research_memo_drafter.txt
scripts/: approve.sh  cloud_smoke_test.py  e2e_acceptance_test.py  e2e_candidate_factory_smoke.py  eval_candidate_factory.py  generate_diagnostic_report.py  generate_prompt_enums.py  list_runs.sh  logs.sh  outputs.sh  qa_module1_v0_2.sh  start_run.sh  status.sh
tests/: README.md  conftest.py  e2e_simple_test.py  test_api_candidates.py  test_api_candidates_and_packs.py  test_api_development_packs.py  test_api_keys.py  test_api_output_scoping.py  test_budget_tracker.py  test_cache_utils.py  test_candidate_card_contract.py  test_candidate_composer.py  test_candidate_evaluator.py  (+69 more)
(+44 files in other folders)
