[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pi-generator"
version = "0.1.0"
description = "Auto-PI Research Scaffold"
authors = [{name = "AutoPI", email = "auto@pi.org"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "arxiv>=2.4.0",
    "fastapi>=0.115.0",
    "geopandas>=1.1.2",
    "langchain-anthropic>=1.3.4",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pandas>=2.3.3",
    "pyalex>=0.21",
    "pyyaml>=6.0",
    "pyarrow>=23.0.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scholarly>=1.7.11",
    "semanticscholar>=0.11.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
geospatial = [
    "osmnx>=2.1.0",
    "networkx>=3.0",
    "shapely>=2.0",
    "pyogrio>=0.9",
]
vision = [
    "pillow>=10.0",
    "opencv-python-headless>=4.9",
    "transformers>=4.40",
]
deepvision = [
    "torch",
    "segment-anything",
]
postgres = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg2-binary>=2.9.10",
]

[tool.setuptools.packages.find]
include = ["agents*", "api*", "models*", "ui*", "config*"]

[tool.pytest.ini_options]
markers = [
    "live_openalex: marks tests that call the real OpenAlex API (require OPENALEX_API_KEY, OPENALEX_EMAIL, pyalex)",
    "live_llm: marks tests that call real LLM APIs (require GEMINI_API_KEY / GOOGLE_API_KEY)",
    "asyncio: marks tests that run asyncio event loop",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
]
